# Bellemin-Laponnaz_2026_JAMES

./: README.md  download_data.sh  environment.yml  pyproject.toml
OSSE_generator/: extract_bar.ipynb  extract_bm.ipynb  extract_it.ipynb  extract_modes.ipynb  notebook_miost_like_ssh.ipynb
analysis/: fig01_osse_problem.ipynb  fig02_07_visual_analysis.ipynb  fig03_05_07_spectral_analysis.ipynb  fig04_08_rmse_maps.ipynb  functions_interp.ipynb  tab_rmse.ipynb
mapping/: config_QG.py  config_QGSW.py  config_QGSW_notime.py
mapping/aux/: Bathymetry_hawaii.nc  aux_reduced_basis_BM.nc  mask_swot.npy  notebook_aux.ipynb
mapping/aux/FES_tide/eastward_velocity/: m2.c  m2.nc  n2.nc  s2.nc
mapping/aux/FES_tide/northward_velocity/: m2.c  n2.c  s2.c
mapping/config_files/: config_QG.py  config_QGSW.py  config_QGSW_notime.py
mapping/examples/test_it_generation/: notebook_test.ipynb
mapping/models/model_qg1l/: jqgm.py
mapping/models/model_sw1l/: jswm.py  jswm_flo.py
mapping/notebooks/: notebook.ipynb  notebook_QG.ipynb  notebook_QGSW.ipynb
mapping/src/: basis.py  basis_archive.py  bc.py  config_default.py  diag.py  functions_interp.py  inv.py  mod.py  obs.py  obsop.py  state.py  tools.py  tools_4Dvar.py  tools_4Dvar_val.py
