[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "VarDyn"
authors = [
    { name = "Valentin Bellemin-Laponnaz", email = "valentin.bellemin@hotmail.fr" },
    { name = "Florian Le Guillou", email = "florian.leguillou@datlas.fr" },
    { name = "Clément Ubelmann", email = "clement.ubelmann@datlas.fr" },
    { name = "Blayo Eric", email = "Eric.Blayo@univ-grenoble-alpes.fr" },
    { name = "Emmanuel Cosme", email = "Emmanuel.Cosme@univ-grenoble-alpes.fr" },
]
description = "Sources for the paper Bellemin-Laponnaz et al. A variational method for reconstructing and separating balanced motions and internal tides from wide-swath altimetric sea surface height observations."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["sea-surface-height","swot-satellite","internal-tides"]
license = { text = "CC0-1.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "matplotlib",
    "xarray",
    "scipy",
    "logging",
    "xrft",
    "xskillscore",
    "netCDF4",
    "pandas",
    "cmocean",
    "jaxparrow", 
    "ipykernel", 
    "joblib",
    "dask", 
]
dynamic = ["version"]
